@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-05-04T01:46:40Z",
-  "count" : 127,
+  "timestamp" : "2025-05-17T01:38:11Z",
+  "count" : 52,
   "count_minmax" : [ 29, 127 ],
-  "count_decinc" : [ -0, +127 ],
-  "uniques" : 3,
+  "count_decinc" : [ -75, +127 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
