@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-05-16T01:40:58Z",
-  "count_outdated" : 253551,
-  "uniques_outdated" : 2585,
-  "count" : 255311,
-  "uniques" : 2615,
+  "timestamp" : "2025-05-17T01:38:11Z",
+  "count_outdated" : 253675,
+  "uniques_outdated" : 2587,
+  "count" : 255434,
+  "uniques" : 2616,
   "clones" : [
     {
-      "timestamp": "2025-05-02T00:00:00Z",
-      "count": 52,
-      "count_minmax": [ 27, 124 ],
-      "count_decinc": [ 72, 124 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2025-05-03T00:00:00Z",
-      "count": 127,
+      "count": 52,
       "count_minmax": [ 29, 127 ],
-      "count_decinc": [ 0, 127 ],
-      "uniques": 3,
+      "count_decinc": [ 75, 127 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2025-05-04T00:00:00Z",
@@ -133,12 +124,21 @@
     },
     {
       "timestamp": "2025-05-16T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 25, 25 ],
-      "count_decinc": [ 0, 25 ],
+      "count": 123,
+      "count_minmax": [ 25, 123 ],
+      "count_decinc": [ 0, 123 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-05-17T00:00:00Z",
+      "count": 25,
+      "count_minmax": [ 25, 25 ],
+      "count_decinc": [ 0, 25 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
