@@ -1,16 +1,11 @@
 {
-  "count": 1688,
+  "count": 1684,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-05-02T00:00:00Z",
-      "count": 52,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-05-03T00:00:00Z",
-      "count": 127,
-      "uniques": 3
+      "count": 52,
+      "uniques": 2
     },
     {
       "timestamp": "2025-05-04T00:00:00Z",
@@ -74,8 +69,13 @@
     },
     {
       "timestamp": "2025-05-16T00:00:00Z",
-      "count": 25,
+      "count": 123,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-05-17T00:00:00Z",
+      "count": 25,
+      "uniques": 1
     }
   ]
 }
